# unifi-search-tool

./: .gitignore  Cargo.toml  README.md  build.rs  build_notes.md  config.txt  icon.rc  requirements.txt  resources.py  resources.qrc  search-unifi-tool.py  search-unifi-tool.spec  test  unifi-search-tool.py
build_stuff/: build_installer.iss  build_installer_v2.iss  build_notes.md
src/: gui.rs  main.rs  unifi.rs
src/gui/: app.rs  mod.rs  popup.rs
src/mac_addr_validation/: mac_addr_regex.bigendian.dfa  mod.rs
src/mac_address/: mod.rs
src/mac_address/validation/: mac_addr_regex.littleendian.dfa  mod.rs
src/misc/: unifi_models_to_names.csv
src/unifi/: api.rs  api_async.rs  devices.rs  mod.rs  search.rs  search_async.rs
