[package]
name = "unifi-search-tool"
version = "2.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.26"
eframe = "0.26"
flume = "0.11"
image = "0.25"
once_cell = "1.19"
regex-automata = { version = "0.4", default-features = false, features=["std", "perf", "dfa"] }
reqwest = {version = "0.11", features = ["blocking", "cookies", "json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = "1.6"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
embed-resource = "2.4"

[build-dependencies]
regex-automata = { version = "0.4", default-features = false, features=["std", "syntax", "perf", "dfa"] }

[profile.release]
#opt-level = "z"  # Optimize for size.
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.winres]
OriginalFilename = "unifi-search-tool.exe"
FileDescription = "Tool to search for device by MAC Address across sites within a Unifi controller"
LegalCopyright = "Copyright © 2022-2024"