[package]
name = "unifi-search-tool"
version = "2.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features=["serde"] }
egui = { version = "0.27", features = ["extra_debug_asserts"] }
eframe = "0.27"
flume = { version = "0.11", default-features = false }
image = { version = "0.25", default-features = false, features=["ico"] }
once_cell = "1.19"
regex-automata = { version = "0.4", default-features = false, features=["std", "perf", "dfa"] }
reqwest = {version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "blocking", "cookies", "json", "zstd"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = "3.7"
simd-json = "0.13"
thiserror = "1.0"
zeroize = "1.6"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
embed-resource = "2.4"

[build-dependencies]
regex-automata = { version = "0.4", default-features = false, features=["std", "syntax", "perf", "dfa"] }

[profile.release]
#opt-level = "z"  # Optimize for size.
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.winres]
OriginalFilename = "unifi-search-tool.exe"
FileDescription = "Tool to search for device by MAC Address across sites within a Unifi controller"
LegalCopyright = "Copyright © 2022-2024"
