[package]
name = "unifi-search-tool"
version = "2.3.1"
edition = "2021"
authors = ["Crypto-Spartan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.39", features=["serde"] }
constcat = "0.6.0"
egui = "0.31"
eframe = "0.31"
flume = { version = "0.11", default-features = false }
image = { version = "0.25", default-features = false, features=["ico"] }
multiversion = "0.8"
once_cell = "1.19"
regex-automata = { version = "0.4", default-features = false, features=["std", "perf", "dfa"] }
reqwest = {version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "blocking", "cookies", "json", "zstd"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = "3.12"
simd-json = "0.15"
thiserror = "2.0"
zeroize = "1.8"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
embed-resource = "3.0"

[build-dependencies]
regex-automata = { version = "0.4", default-features = false, features=["std", "syntax", "perf", "dfa"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.winres]
OriginalFilename = "unifi-search-tool.exe"
FileDescription = "Tool to search for device by MAC Address across sites within a Unifi controller"
LegalCopyright = "Copyright © 2022-2025"
